# VelyraCore

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  run_coverage.sh
.github/workflows/: main.yml
Dependencies/Unix/tinyfiledialogs/: CMakeLists.txt
cmake/: Dependencies.cmake  Glad.cmake  ImLib.cmake  TinyFileDialogs.cmake  VelyraCoreUnix.cmake  VelyraCoreWin32.cmake
include/VelyraCore/: VelyraCore.hpp
include/VelyraCore/Context/: ApiState.hpp  ColorAttachment.hpp  ConstantBuffer.hpp  Context.hpp  Definitions.hpp  DepthStencilAttachment.hpp  DepthStencilState.hpp  Device.hpp  FrameBuffer.hpp  FrameBufferLayout.hpp  IndexBuffer.hpp  MeshBinding.hpp  RenderPass.hpp  RenderPassLayout.hpp  Sampler.hpp  Shader.hpp  ShaderModule.hpp  Texture2D.hpp  VertexBuffer.hpp  VertexLayout.hpp  Viewport.hpp
include/VelyraCore/Core/: CoreInclude.hpp  GraphicsAPI.hpp
include/VelyraCore/Window/: Event.hpp  KeyboardButtons.hpp  MouseButtons.hpp  Window.hpp  WindowFactory.hpp
src/VelyraCore/: LoggerNames.hpp  Pch.hpp  VelyraCore.cpp
src/VelyraCore/Context/: Context.cpp  Definitions.cpp  FrameBufferLayout.cpp  RenderPassLayout.cpp  VertexLayout.cpp
src/VelyraCore/Context/OpenGL/: GLColorAttachment.cpp  GLColorAttachment.hpp  GLConstantBuffer.cpp  GLConstantBuffer.hpp  GLContext.cpp  GLContext.hpp  GLDepthStencilAttachment.cpp  GLDepthStencilAttachment.hpp  GLDepthStencilState.cpp  GLDepthStencilState.hpp  GLDevice.cpp  GLDevice.hpp  GLFrameBuffer.cpp  GLFrameBuffer.hpp  GLIndexBuffer.cpp  GLIndexBuffer.hpp  GLMeshBinding.cpp  GLMeshBinding.hpp  GLRenderPass.cpp  GLRenderPass.hpp  GLSampler.cpp  GLSampler.hpp  GLShader.cpp  GLShader.hpp  GLShaderModule.cpp  GLShaderModule.hpp  GLState.cpp  GLState.hpp  GLTexture2D.cpp  GLTexture2D.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp  GLViewport.cpp  GLViewport.hpp
src/VelyraCore/Context/OpenGL/Internal/: GLBuffer.cpp  GLBuffer.hpp  GLPlatformContext.hpp  GLRenderBuffer.cpp  GLRenderBuffer.hpp  GLRenderBufferStorage.cpp  GLRenderBufferStorage.hpp  GLTexture.cpp  GLTexture.hpp  GLTextureStorage.cpp  GLTextureStorage.hpp  GLTranslations.cpp  GLTranslations.hpp  Glfw3PlatformContext.cpp  Glfw3PlatformContext.hpp  IGLFramebufferStorage.hpp  Translations.cpp  Translations.hpp  WglPlatformContext.cpp  WglPlatformContext.hpp
src/VelyraCore/Dependencies/glad/include/glad/: glad.h  glad_wgl.h
src/VelyraCore/Dependencies/glad/src/: glad.c  glad_wgl.c
src/VelyraCore/Logging/: GLLogging.cpp  GLLogging.hpp  LoggerNames.hpp  Win32Logging.cpp  Win32Logging.hpp
src/VelyraCore/Window/: WindowFactory.cpp
src/VelyraCore/Window/Glfw3/: Glfw3Utils.cpp  Glfw3Utils.hpp  Glfw3Window.cpp  Glfw3Window.hpp
src/VelyraCore/Window/Win32/: Win32ForwardDeclarations.hpp  Win32Utils.cpp  Win32Utils.hpp  Win32Window.cpp  Win32Window.hpp  WindowWin32.cpp  WindowWin32.hpp
src/VelyraCoreSandBox/: DataContainer.cpp  DataContainer.hpp  DataTypes.hpp  IComponent.hpp  IProcedure.hpp  ImGuiWidgets.cpp  ImGuiWidgets.hpp  Meshes.cpp  Meshes.hpp  Pch.hpp  ProcedureExecutor.cpp  ProcedureExecutor.hpp  SandBox.cpp  SandBox.hpp  SandBoxInclude.hpp  Utils.cpp  Utils.hpp
src/VelyraCoreSandBox/Procedures/: CameraProcedure.cpp  CameraProcedure.hpp  ClearDefaultFrameBufferProcedure.cpp  ClearDefaultFrameBufferProcedure.hpp  ContextInfoProcedure.cpp  ContextInfoProcedure.hpp  DepthStencilStateProcedure.cpp  DepthStencilStateProcedure.hpp  EventProcedure.cpp  EventProcedure.hpp  FileDialogProcedure.cpp  FileDialogProcedure.hpp  FrameBufferProcedure.cpp  FrameBufferProcedure.hpp  ImGuiProcedure.cpp  ImGuiProcedure.hpp  IndexDrawProcedure.cpp  IndexDrawProcedure.hpp  MVPProcedure.cpp  MVPProcedure.hpp  MeshBindingProcedure.cpp  MeshBindingProcedure.hpp  ModelViewProjectionProcedure.cpp  ModelViewProjectionProcedure.hpp  ProjectionProcedure.cpp  ProjectionProcedure.hpp  SamplerProcedure.cpp  SamplerProcedure.hpp  TextureProcedure.cpp  TextureProcedure.hpp  TexturedMVPProcedure.cpp  TexturedMVPProcedure.hpp  VertexDrawProcedure.cpp  VertexDrawProcedure.hpp
src/VelyraCoreSandBox/Shaders/GLSL/: FrameBuffer_fs.glsl  MVP_fs.glsl  MVP_vs.glsl  Texture_fs.glsl  VertexDraw_fs.glsl
test/: TestPch.hpp
test/Context/: Environment.hpp  Meshes.hpp  Shaders.hpp  TestConstantBuffer.cpp  TestContext.cpp  TestDefinitions.cpp  TestFrameBuffer.cpp  TestIndexBuffer.cpp  TestRenderPass.cpp  TestSampler.cpp  TestShader.cpp  TestShaderModule.cpp  TestShaders.hpp  TestTexture2D.cpp  TestVertexBuffer.cpp  TestVertexLayout.cpp  Textures.hpp
test/Context/OpenGL/: TestGLTranslations.cpp
test/Data/: VertexBuffer_vs.glsl
test/Window/: TestWindow.cpp
test/Window/Win32/: TestWin32Utils.cpp
